# cfa-calculator-cli

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  dev-spec.md  pyproject.toml
src/cfa_calculator/: __init__.py  interactive.py  main.py
src/cfa_calculator/commands/: __init__.py  bond.py  equity.py  option.py  other.py  portfolio.py  stats.py  tvm.py
src/cfa_calculator/formulas/: __init__.py  bond_formulas.py  equity_formulas.py  option_formulas.py  other_formulas.py  portfolio_formulas.py  stats_formulas.py  tvm_formulas.py
src/cfa_calculator/utils/: __init__.py  formatters.py  math_parser.py  validators.py
tests/: __init__.py  test_bond.py  test_equity.py  test_option.py  test_other.py  test_portfolio.py  test_stats.py  test_tvm.py
